--- a/style.css
+++ b/style.css
@@ -6,16 +6,10 @@
   overflow-wrap: break-word;
   word-wrap: break-word; 
 }
-
-/* bodyタグ */
-body {
-  text-align: center; /* 全ての要素を真ん中に */
-  padding: 50px 0; /* 上下の空白を指定 */
-}
-
 /* h1タグ */
 h1 {
   padding: 30px 0; 
+  text-align: center;
 }
 
 /* h2タグ */
@@ -25,6 +19,7 @@ h2 {
   width: 600px; /* 横幅を指定 */
   padding: 5px 0; /* 上下の空白を指定 */
   margin: 20px auto; /* 上下の空白と真ん中に寄せる指定 */
+  text-align: center;
 }
 
 /* h3タグ */
@@ -33,4 +28,5 @@ h3 {
   width: 600px; 
   padding: 5px 0;
   margin: 20px auto; 
+  text-align: center;
 }
