--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   overflow-wrap: break-word;
   word-wrap: break-word; 
 }
+.contents {
+  margin: 0px auto;
+  width:1300px;
+  background: #bfedd5;
+}
 /* h1タグ */
 h1 {
   padding: 30px 0; 
